--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,10 +1,10 @@
 * {
-  font-family: Inter var, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Times New Roman', Times, serif;
 }
 
 .nav-link {
   font-weight: 400;
+  color: black;
 }
 
 .nav-route .nav-link {
@@ -24,7 +24,7 @@
 
 .nav-route .nav-link:hover:before {
   width: 100%;
- background-color: aqua;
+ background-color:black;
 }
 
 .logo-nav {
@@ -45,7 +45,6 @@
 
 .nav-route .active {
   font-weight: bold;
-  font-family: 'Times New Roman', Times, serif;
 }
 
 .text-gray {
@@ -54,7 +53,6 @@
 }
 
 .font-light {
-  font-family: 'Times New Roman', Times, serif;
   font-weight: 300;
 }
 
